test/Fail/Issue2199.err
Issue2199.agda:16.9-11: error: [NotInScope]
Not in scope:
  Id at Issue2199.agda:16.9-11
when scope checking Id
